# mission10

./: .gitignore  README.md  externals.repos  flake.nix
.github/workflows/: ci.yml
models/yolo/: README.md  RUNBOOK.md
models/yolo/datagen/: TODO.md  __init__.py  config.py  dump.py  flightpath.py  generate.py  labels.py  manifest.py  scatter.py  scene.py
models/yolo/test/: test_flightpath.py  test_labels.py  test_scatter.py  test_scene.py
nix/: microxrce-agent.nix
ros/bringup/: package.xml  setup.py
ros/bringup/bringup/: __init__.py  sitl_spawn.py
ros/bringup/config/: fleet.yaml  fleet_phase_reflex.yaml
ros/bringup/launch/: bvc_transit.launch.py  phase_reflex.launch.py  phased_orbits.launch.py  pinwheel.launch.py  sitl_fleet.launch.py  stage1_intelligent.launch.py
ros/flight_intelligent/: package.xml  setup.cfg  setup.py
ros/flight_intelligent/config/: bvc_transit.yaml  phase_reflex.yaml  phased_orbits.yaml  pinwheel.yaml  stage1.yaml
ros/flight_intelligent/flight_intelligent/: __init__.py  bvc_transit_mission.py  mission_sm.py  orbit_mission.py  phase_reflex_mission.py  phased_orbits_mission.py  pinwheel_mission.py
ros/flight_intelligent/launch/: stage1.launch.py
ros/flight_interfaces/: CMakeLists.txt  package.xml
ros/flight_interfaces/msg/: UwbRange.msg  UwbState.msg
ros/flight_lib/: package.xml  setup.cfg  setup.py
ros/flight_lib/flight_lib/: __init__.py  bvc.py  deconflict.py  orbit.py  phased_orbits.py  pinwheel.py  profiles.py  rel_localization.py
ros/flight_lib/test/: test_bvc.py  test_deconflict.py  test_phased_orbits.py  test_pinwheel.py  test_rel_localization.py
ros/px4_msgs/: CMakeLists.txt  package.xml
ros/px4_offboard/: package.xml  setup.py
ros/px4_offboard/px4_offboard/: __init__.py  controller.py  mission_gate.py
ros/ros_gz_marker_bridge/: CMakeLists.txt  package.xml
ros/ros_gz_marker_bridge/src/: marker_bridge.cpp
ros/sim_truth_ev/: package.xml  setup.cfg  setup.py
ros/sim_truth_ev/launch/: ev_bridge.launch.py
ros/sim_truth_ev/sim_truth_ev/: __init__.py  frames.py  gt_to_ev.py  world_truth_to_odom.py
ros/sim_uwb/: package.xml  setup.cfg  setup.py
ros/sim_uwb/sim_uwb/: uwb_range_sim.py
scripts/: make_workspace.sh  sitl.sh  sync_px4_msgs.sh  viz.sh  viz_markers.py  viz_overlay.py  viz_sep_live.py  viz_setpoint_live.py
