<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flight_intelligent</name>
  <version>0.0.0</version>
  <description>Proof-of-intelligent-flight missions built on px4_offboard and flight_lib.</description>
  <maintainer email="131201352+calgary-kirisame@users.noreply.github.com">calgary-kirisame</maintainer>
  <license>MPL-2.0</license>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <depend>std_msgs</depend>
  <depend>px4_offboard</depend>
  <depend>flight_lib</depend>
  <depend>flight_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
