<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_msgs</name>
  <version>0.0.0</version>
  <description>ROS 2 interfaces for PX4 uORB messages. Definitions are synced from
  the PX4 fork (calgary-kirisame/PX4-Autopilot) by scripts/sync_px4_msgs.sh and
  must match the firmware in flight; do not hand-edit msg/ or srv/. Message
  content is PX4, BSD-3-Clause.</description>
  <maintainer email="131201352+calgary-kirisame@users.noreply.github.com">calgary-kirisame</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>ros_environment</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
