<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_gz_marker_bridge</name>
  <version>0.0.0</version>
  <description>Relay visualization_msgs/MarkerArray into the Gazebo GUI scene via a
    persistent gz-transport node calling the /marker_array service (no per-call CLI
    discovery cost). Lets ROS code draw real-time overlays in the Gazebo window.</description>
  <maintainer email="131201352+calgary-kirisame@users.noreply.github.com">calgary-kirisame</maintainer>
  <license>MPL-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <!-- gz-transport13 / gz-msgs10 are found via find_package from ros-env (not
       colcon packages, so no <depend> entry). -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
